--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ nav {
 
 .project__wrapper:hover .project__wrapper--bg  {
     opacity: 0.7;
+    transition: all 450ms ease;
 }
 
 .project__wrapper--bg {
@@ -257,7 +258,7 @@ nav {
     width: 100%;
     height: 100%;
     background-color: #1c1d25;
-    opacity: 0.7;
+    opacity: 0;
 }
 
 .project__description--title {
