--- a/style.css
+++ b/style.css
@@ -55,6 +55,23 @@ input:focus, textarea:focus {
     border-color: #f06449;
 }
 
+nav,
+.scroll,
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 800ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms;
+}
+
+
 label {
     font-size: 14px;
     font-weight: bold;
@@ -393,11 +410,18 @@ footer {
     width: 90%;
     max-width: 1100px;
     height: 700px;
-    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
     border-radius: 20px;
     overflow: hidden;
     display: flex;
+    visibility: hidden;
+    z-index: -1;
+    transition: visibility 1s, z-index 1s, box-shawdow 0.5s ease;
+}
 
+.modal--open .modal{
+    z-index: 60;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+    visibility: visible;
 }
 
 .modal__half {
@@ -407,6 +431,18 @@ footer {
     flex-direction: column;
     justify-content: center;
     position: relative;
+    transition: all 300ms ease-in;
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact
+{
+    transform:translateX(0%);
+}
+
+.modal__about {
+    background-color: rgb(245, 245, 245);
+    transform: translateX(-110%);
 }
 
 .modal__about {
@@ -450,6 +486,7 @@ footer {
 .modal__contact {
     background-color: #242424;
     color: white;
+    transform: translateX(110%);
 }
 
 .modal__language--img {
@@ -501,7 +538,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none
     align-items: center;
     justify-content: center;
     z-index: -1;
@@ -509,12 +546,13 @@ footer {
 
 .modal__overlay--visible {
     z-index: 1;
+    display: flex;
 }
 
 .modal__overlay--loading {
     background-color: #242424;
     font-size: 80px;
-    z-index: -1;
+    
 }
 
 .modal__overlay--success {
