--- a/style.css
+++ b/style.css
@@ -538,7 +538,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    display: none
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: -1;
