--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ nav {
 
 .project__wrapper:hover .project__img {
     transform: scale(1.07);
-    filter: blur(5px);
+    filter: blur(5px);gggg
 }
 
 
