--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ label {
 
 section {
     background-color: rgb(245, 245, 245);
+    transition: all 300ms ease;
 }
 
 .title {
@@ -147,6 +148,43 @@ section {
 .link__hover-effect--black:after {
     background-color: #242424;
 }
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .project__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para
+{
+    color: white;
+}
+
+.dark-theme section {
+    background-color: #242424;
+}
+
+.dark-theme #personal-logo {
+    filter: none;
+}
+
+.dark-theme .scroll__icon {
+    border-color: white;
+}
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after
+ {
+    background-color: white;
+}
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--white:after
+ {
+    background-color: black;
+}
+.dark-theme .mail__btn {
+    background-color: white;
+    color: #242424;
+}
+
     
 
 /* LANDING PAGE  */
@@ -585,4 +623,58 @@ footer {
     color: white;
     font-size: 36px;
     z-index: 100;
+}
+
+/* 
+
+SHAPES
+
+shapes on the first row height =15 vh
+shapes on the second row height =50vh 
+shapes on the third row height =80vh
+
+shapes on the first column width = 5vm
+shapes on the second column width = 50vm
+shapes on the third column width = 80vw 
+
+*/
+
+.shape {
+    position: fixed;
+}
+.shape--0 {
+    top: 15vh;
+    left: 5vw;;
+}
+.shape--1 {
+    top: 15vh;
+    left: 50vw;;
+}
+.shape--2 {
+    top: 15vh;
+    left: 80vw;;
+}
+.shape--3 {
+    top: 50vh;
+    left: 5vw;;
+}
+.shape--4 {
+    top: 50vh;
+    left: 50vw;;
+}
+.shape--5 {
+    top: 95vh;
+    left: 80vw;;
+}
+.shape--6 {
+    top: 80vh;
+    left: 5vw;;
+}
+.shape--7 {
+    top: 80vh;
+    left: 50vw;;
+}
+.shape--8 {
+    top: 80vh;
+    left: 80vw;;
 }
